# AOC

./: '  .aocdlconfig  .gitignore  Cargo.toml  LICENSE  README.md  day  day1.c
aoc2021/: README.md
aoc2021/solustion_in_c/: makefile
aoc2021/solustion_in_c/day3/: main.c
aoc2021/src/: day11.rs  day12.rs  day4.rs  day6.rs  day7.rs  day9.rs  dayx.rs  main.rs
aoc2022/: :w  Cargo.toml  README.md  view_video.php?viewkey=ph5a15762bdf6eb
aoc2022/src/util/: parsing.rs
aoc2023/: .env  Cargo.toml  build.sh  justfile
aoc2023/daily-template/: Cargo.toml
aoc2023/daily-template/src/: part1.rs  part2.rs
aoc2023/day-01/: Cargo.toml
aoc2023/day-01/src/: part1.rs  part2.rs
aoc2023/day-02/: Cargo.toml
aoc2023/day-02/src/: part1.rs  part2.rs
aoc2023/day03/: main.c
aoc2023/scripts/: Cargo.old  get-aoc-input.rs
aoc2024/: build.sh  nob  nob.c
aoc2024/day01/: main.c  test.txt
aoc2025/: package.json  tsconfig.json
aoc2025/day01/: index.ts
aoc2025/day02/: index.ts
aoc2025/day03/: index.ts
aoc2025/day04/: index.ts
aoc2025/day05/: index.ts
aoc2025/day06/: index.ts
day2/: main.c
day4/: main.c  makefile
rust/: Cargo.toml
rust/src/: lib.rs
solustion_in_c/: day1.c
src/: day10.rs  day11.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  dayx.rs  main.rs
