[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "day1"
path = "src/bin/day1.rs"

[dependencies]
anyhow = "1.0.51"
itertools = "0.10.1"
